Complete Task 1:  - Create course API with CRUD (soft delete)  - Create user API - get user and create user  - Add Swagger docs
