# backend/routes/userRoutes.js
@@ -1,0 +1,8 @@
+const express = require('express');
+const router = express.Router();
+const controller = require('../controllers/userController');
+
+router.post('/', controller.createUser);
+router.get('/instructor', controller.getUsers);
+
+module.exports = router;
